--- a/Moazzam/src/Systemverilog/seq_multiplier/Makefile
+++ b/Moazzam/src/Systemverilog/seq_multiplier/Makefile
@@ -2,9 +2,8 @@
 TOP_MODULE = seq_multiplier_tb
 SRC_FILES =  seq_multiplier.sv seq_multiplier_tb.sv seq_multiplier_con.sv
 WORK_DIR = work
+RUNTIME = -all
 
-# Default target
-all: compile simulate
 
 # Create a working library and compile source files
 compile:
@@ -13,14 +12,19 @@ compile:
 	@echo "Compiling source files..."
 	vlog -work $(WORK_DIR) $(SRC_FILES)
 
-# Run the simulation
-simulate:
+# Run the simulation and generate WLF file
+simulate: compile
 	@echo "Running simulation..."
-	vsim -c -do "run -all; quit" -L $(WORK_DIR) $(TOP_MODULE)
+	vsim -L $(WORK_DIR) $(TOP_MODULE) -do "add wave -radix Decimal sim:/$(TOP_MODULE)/DUT/*; run $(RUNTIME)"
+
+run: compile
+	@echo "Running the module..."
+	vsim -c -do "run -all; quit;" -L $(WORK_DIR) $(TOP_MODULE)
 
 # Clean up generated files
 clean:
 	@echo "Cleaning up..."
 	rm -rf $(WORK_DIR) transcript vsim.wlf
+
 
 .PHONY: all compile simulate clean
