corrected and updated all files

--- a/Nasir/src/valid_ready_interface_seq_multiplier/Makefile
+++ b/Nasir/src/valid_ready_interface_seq_multiplier/Makefile
@@ -22,7 +22,7 @@ run: $(TARGET)
 	./$(TARGET)
 
 # simulation
-vsim: $(TARGET)
+simulate: $(TARGET)
 	gtkwave $(TARGET).vcd
 # clean object files and executables
 clean: 
